themes/develop/themes/Freesm-Dark/themeStyle.css
/* ... */
QRadioButton::indicator:hover {
    background-color: rgba(255, 255, 255, 16);
}

QRadioButton::indicator:pressed {
    background-color: rgba(255, 255, 255, 20);
    border: 1px solid #434343;
    image: url(theme:RadioButton.png);
}

QRadioButton::indicator:checked {
    background-color: #cba6f7;
    border: 1px solid #cba6f7;
    image: url(theme:RadioButton.png);
}

QRadioButton::indicator:checked:hover {
    image: url(theme:RadioButtonHover.png);
}

QRadioButton::indicator:checked:pressed {
    image: url(theme:RadioButtonPressed.png);
}

QRadioButton:disabled {
    color: rgba(150, 150, 150);
}

QRadioButton::indicator:disabled {
    border: 1px solid #646464;
    background-color: rgba(255, 255, 255, 0);
}

QSlider:vertical {
    min-width: 30px;
    min-height: 100px;
}

QSlider::groove:vertical {
    width: 5px;
    background-color: rgba(255, 255, 255, 150);
    border-radius: 2px;
}

QSlider::handle:vertical {
    background-color: #cba6f7;
    border: 4px solid #454545;
    height: 9px;
    min-width: 13px;
    margin: 0px -7px;
    border-radius: 8px;
}

QSlider::handle:vertical:hover {
    background-color: #cba6f7;
    border: 3px solid #454545;
    height: 11px;
    min-width: 13px;
    margin: 0px -7px;
    border-radius: 8px;
}

QSlider::handle:vertical:pressed {
    background-color: #cba6f7;
    border: 5px solid #454545;
    height: 7px;
    min-width: 13px;
    margin: 0px -7px;
    border-radius: 8px;
}

QSlider::groove:vertical:disabled {
    background-color: rgba(255, 255, 255, 75);
}

QSlider::handle:vertical:disabled {
    background-color: #454545;
    border: 6px solid #353535;
}

QSlider:horizontal {
    min-width: 100px;
    min-height: 30px;
}

QSlider::groove:horizontal {
    height: 3px;
    background-color: rgba(255, 255, 255, 150);
    border-radius: 1px;
    padding-left: 0px;
    padding-right: 0px;
}

QSlider::handle:horizontal {
    background-color: #cba6f7;
    border: 4px solid #454545;
    width: 9px;
    min-height: 13px;
    margin: -7px 0;
    border-radius: 8px;
}

QSlider::handle:horizontal:hover {
    background-color: #cba6f7;
    border: 3px solid #454545;
    width: 11px;
    min-height: 13px;
    margin: -7px 0;
    border-radius: 8px;
}

QSlider::handle:horizontal:pressed {
    background-color: #cba6f7;
    border: 5px solid #454545;
    width: 7px;
    min-height: 13px;
    margin: -7px 0;
    border-radius: 8px;
}

QSlider::groove:horizontal:disabled {
    background-color: rgba(255, 255, 255, 75);
}

QSlider::handle:horizontal:disabled {
    background-color: #454545;
    border: 6px solid #353535;
}

QCheckBox,
QLabel,
QCheckBox,
QAbstractCheckBox,
QTreeView::indicator,
QRadioButton {
    min-height: 20px;
    font-style: normal;
}

QGroupBox::indicator,
QMenu::indicator,
QCheckBox::indicator,
QTreeView::indicator {
    width: 15px;
    height: 15px;
    border-radius: 4px;
    border: 1px solid #606060;
    background-color: rgba(255, 255, 255, 0);
    margin-right: 5px;
}

QGroupBox::indicator:hover,
QMenu::indicator:hover,
QCheckBox::indicator:hover,
QTreeView::indicator:hover {
    background-color: rgba(255, 255, 255, 16);
}

QGroupBox::indicator:pressed,
QMenu::indicator:pressed,
QCheckBox::indicator:pressed,
QTreeView::indicator:pressed {
    background-color: rgba(255, 255, 255, 20);
    border: 1px solid #505050;
}

QGroupBox::indicator:checked,
QMenu::indicator:checked,
QCheckBox::indicator:checked,
QTreeView::indicator:checked {
    background-color: #cba6f7;
    border: 1px solid #cba6f7;
    image: url(theme:CheckBox.png);
}

QGroupBox::indicator:checked:hover,
QMenu::indicator:checked:hover,
QCheckBox::indicator:checked:hover,
QTreeView::indicator:checked:hover {
    background-color: #cba6f7;
    border: 1px solid #cba6f7;
}

QGroupBox::indicator:checked:pressed,
QMenu::indicator:checked:pressed,
QCheckBox::indicator:checked:pressed,
QTreeView::indicator:checked:pressed {
    background-color: #cba6f7;
    border: 1px solid #cba6f7;
    image: url(theme:CheckBoxPressed.png);
}

QCheckBox::indicator:indeterminate,
QGroupBox::indicator:indeterminate,
QTreeView::indicator:indeterminate,
QTableView::indicator:indeterminate {
    background-color: #cba6f7;
    border: 1px solid #cba6f7;
    image: url(theme:CheckBoxInterminate.png);
}

QCheckBox::indicator:indeterminate:hover,
QGroupBox::indicator:indeterminate:hover,
QTreeView::indicator:indeterminate:hover,
QTableView::indicator:indeterminate:hover {
    background-color: #cba6f7;
    border: 1px solid #cba6f7;
}

QCheckBox::indicator:indeterminate:pressed,
QGroupBox::indicator:indeterminate:pressed,
QTreeView::indicator:indeterminate:pressed,
QTableView::indicator:indeterminate:pressed {
    background-color: #cba6f7;
    border: 1px solid #cba6f7;
    image: url(theme:CheckBoxInterminatePressed.png);
}

QCheckBox::indicator:indeterminate:disabled,
QGroupBox::indicator:indeterminate:disabled,
QTreeView::indicator:indeterminate:disabled,
QTableView::indicator:indeterminate:disabled {
    border: 1px solid #404040;
    background-color: #404040;
    image: url(theme:CheckBoxInterminateDisabled.png);
}

QGroupBox::indicator:checked:disabled,
QMenu::indicator:checked:disabled,
QCheckBox::indicator:checked:disabled,
QTreeView::indicator:checked:disabled {
    border: 1px solid #404040;
    background-color: #404040;
    image: url(theme:CheckBoxDisabled.png);
}

QGroupBox::indicator:disabled,
QMenu::indicator:disabled,
QCheckBox::indicator:disabled,
QTreeView::indicator:disabled {
    border: 1px solid #404040;
    background-color: rgba(255, 255, 255, 0);
}

QStatusBar::item {
    background: transparent;
}

QTableView,
QColumnView {
    gridline-color: rgba(255, 255, 255, 0);
}

QGroupBox
QToolButton {
    padding: 6px;
}

QDialog QListView::icon,
QDialog QListView::text {
    left: 0px;
}

InstanceView
{
    padding: 5px;
    background-color: rgba(0,0,0,30%);
}

#mainToolBar
{
    background: rgba(0,0,0,0%);
}
/* ... */

